<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:textSize="40sp"
        android:text="What do you want to delete?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center" />

    <Button
        android:id="@+id/button_QR"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="96dp"
        android:text="QR"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/button_event"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_event"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="56dp"
        android:text="Event"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>