...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        android:paddingTop="16dp"/>

    <ListView
        android:id="@+id/admin_events_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@color/black"
        android:dividerHeight="1dp"
        android:fontFamily="@font/quicksand"
        android:paddingTop="16dp"
...
