<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:textSize="40sp"
        android:text="Do you want to delete the Facility?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center" />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:text="Yes"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:text="No"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />




</androidx.constraintlayout.widget.ConstraintLayout>