<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FacilityActivity">

    <TextView
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        android:paddingTop="16dp"/>


    <ListView
        android:id="@+id/admin_facilities_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@color/black"
        android:dividerHeight="1dp"
        android:fontFamily="@font/quicksand"
        android:paddingTop="16dp"
...
