...
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
        android:text="Browse Events"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/browse_facilities_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_events_button"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
...
