<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="20dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cinzel_decorative"
        android:text="TROJAN0"
        android:textColor="#8C52FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/logoText"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:contentDescription="Profile Picture"
        android:background="@drawable/circular_ring"
        android:clipToOutline="true"
        android:layout_marginBottom="8dp" />

    <!-- Edit Icon -->
    <ImageButton
        android:id="@+id/editImageIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignBottom="@id/profileIcon"
        android:layout_alignEnd="@id/profileIcon"
        android:src="@drawable/plus_icon"
        android:contentDescription="Edit Profile Picture"
        android:layout_marginBottom="8dp" />

    <!-- Delete Icon -->
    <ImageButton
        android:id="@+id/deleteImageIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignBottom="@id/profileIcon"
        android:layout_marginEnd="-24dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@id/profileIcon"
        android:contentDescription="Remove Profile Picture"
        android:src="@drawable/minus_icon"
        android:visibility="gone" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIcon"
        android:layout_centerHorizontal="true"
        android:text="Profile Page"
        android:textSize="22sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="24dp" />

    <!-- First Name Input -->
    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileTitle"
        android:hint="First Name"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:layout_marginBottom="12dp" />

    <!-- Last Name Input -->
    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameInput"
        android:hint="Last Name"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:layout_marginBottom="12dp" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameInput"
        android:hint="Username"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:layout_marginBottom="12dp" />

    <!-- Email Address Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameInput"
        android:hint="Email Address"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:hint="Phone Number"
        android:textColor="@color/black"
        android:inputType="phone"
        android:layout_marginBottom="12dp" />

    <!-- Notifications Toggle -->
    <TextView
        android:id="@+id/notificationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberInput"
        android:textColor="@color/black"
        android:text="Would you like to receive notifications?"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

    <Switch
        android:id="@+id/notificationsToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberInput"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp" />

    <!-- View Signed Up Events Button -->
    <Button
        android:id="@+id/viewEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationsToggle"
        android:layout_centerHorizontal="true"
        android:text="View"
        android:backgroundTint="#B391F8"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp" />

    <!-- Scan QR Code Button -->

    <!-- Bottom Navigation Icons -->

    <Button
        android:id="@+id/scanQrCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewEventsButton"
        android:layout_marginTop="-450dp"
        android:backgroundTint="#8C52FF"
        android:text="Scan QR Code"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Profile Icon -->
        <ImageView
            android:id="@+id/navProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/home_icon"
            android:contentDescription="Profile Icon"
            android:src="@drawable/baseline_person_24" />

        <!-- Camera Icon -->
        <ImageView
            android:id="@+id/navCamera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/home_icon"
            android:contentDescription="Camera Icon"
            android:src="@drawable/baseline_photo_camera_24" />

        <!-- Group Icon -->
        <ImageView
            android:id="@+id/navGroup"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/home_icon"
            android:contentDescription="Group Icon"
            android:src="@drawable/baseline_people_24" />
    </LinearLayout>

</RelativeLayout>