<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/userSignUpLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"> <!-- Background color -->

    <!-- Logo TextView -->
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cinzel_decorative"
        android:text="TROJANO"
        android:textColor="#8C52FF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <!-- User Sign Up Heading -->
    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif"
        android:text="User Sign Up"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#D3D3D3"
        android:hint="Username"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

    <!-- Email Address EditText -->
    <EditText
        android:id="@+id/email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#D3D3D3"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#C2A8FC"
        android:padding="12dp"
        android:text="Sign up"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>
