...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoText" />

    <Button
        android:id="@+id/userButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#BDB2FF"
        android:text="USER"
        android:textAllCaps="true"
...
